# nousad95

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt
config/: __init__.py  app.py  constants.py  imports.py
docs/: index.md
docs/Session Image/: Filesystem.md  Session.md
routers/: __init__.py
routers/api/: __init__.py  link.py  token.py
routers/system/: __init__.py  window.py
static/assets/: close.css  cmd.css  cmd.js  hehe.js
static/assets/nedobloki/: about.css  download.css  download.js
static/data/: default-session-imag.json  default-session-image.json
static/public/scripts/: commands.js  popup.js  session.js
static/public/scripts/commands/: chcp.js  cls.js  exit.js  help.js  title.js
static/public/styles/: console.css
static/scripts/: base.js  cmd.js  console.js  file-system.js  messages.js  session.js  start.js
static/scripts/commands/: cd.js  chcp.js  color.js  dir.js  echo.js  help.js  title.js
static/styles/: base.css  cmd.css  console.css  index.css  popup.css
templates/: base.html  close.html  cmd.html  index.html  unknown.html
templates/nedobloki/: about.html  download.html
templates/site/: about.html
